tests/agl/rejections/type/assign_type_mismatch.agl
var n: int = 1
n := "two"
